# da-dag

./: .gitignore  .pre-commit-config.yaml  EXAMPLES.md  GITHUB_PUSH.md  GRAPHQL_API.md  LICENSE  Makefile  POSTGRESQL_SUPPORT.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml  validate-interview.yml
docassemble_dag/: __init__.py  __main__.py  ast_parser.py  cli.py  comparison.py  compliance.py  conditional.py  db_backends.py  graph.py  graph_operations.py  html_viewer.py  parser.old  parser.py  reconsider.py  types.py  utils.py  validation.py
docassemble_dag/graphql/: schema.py
examples/: LEGALTECH_GUIDE.md  README.md  cplr_graph.dot  cplr_graph.graphml  example_interview.yaml  housing_eviction.yaml  immigration_asylum.yaml  name_change_gender_affirming.yaml  ny_cplr_sample.yaml
src/docassemble_dag/: decision_trees.py  exceptions.py  parser.old  parser.py  persistence.py  schema.py  template_validator.py  test_graphql_server.py
src/docassemble_dag/graphql/: server.py
tests/: __init__.py  test_assembly_line.py  test_ast_parser.py  test_bad_interview.yaml  test_comparison.py  test_compliance.py  test_conditional.py  test_db_backends.py  test_decision_trees.py  test_docassemble_edge_cases.py  test_edge_cases_comprehensive.py  test_examples.py  test_exceptions.py  test_graph.py  test_graph_operations.py  test_graphql_schema.py  test_html_viewer.py  test_integration.py  test_objects.py  test_parser.py  test_persistence.py  test_postgresql.py  test_reconsider.py  test_schema.py  test_template_validator.py  test_utils.py  test_validation.py
