[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble-dag"
version = "0.3.0"
description = "Static analyzer for extracting explicit dependency graphs from Docassemble YAML interviews"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = ""}
]
keywords = ["docassemble", "dependency-graph", "dag", "legaltech", "yaml", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Legal",
]

dependencies = [
    "pyyaml>=5.4.0",
    "strawberry-graphql>=0.216.0",
]

[project.optional-dependencies]
graphql = [
    "strawberry-graphql[fastapi]>=0.216.0",
    "uvicorn>=0.24.0",                        
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]

dev = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "coverage>=7.0",
    "hypothesis>=6.0",
    "black>=24.0",
    "isort>=5.12",
    "flake8>=7.0",
    "mypy>=1.8",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
    "httpx>=0.25.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
]

[project.scripts]
docassemble-dag = "docassemble_dag.cli:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "*/__pycache__/*"]
known_first_party = ["docassemble_dag"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "examples/",
    "build/",
    "dist/",
    ".*",
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["docassemble_dag"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py37"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203", "W503"]  # Conflicts with black
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
